# minimum-wage-api

./: .gitignore  .vercelignore  README.md  deploy.sh  pyproject.toml  redocly.yaml  template.hbs  vercel.json
.github/workflows/: deploy_docs.yaml  pytest.yaml
api/: index.py
api/db/: prefecture.py  wage.py
data/: prefecture_master.json  wage_master.json
doc/: index.html  openapi.yaml
indexer/: import.py  prefecture_master.py  schema.json
seed/: 2002.json  2003.json  2004.json  2005.json  2006.json  2007.json  2008.json  2009.json  2010.json  2011.json  2012.json  2013.json  2014.json  2015.json  2016.json  2017.json  2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json
tests/: test_index.py
