[tool.poetry]
name = "minimum-wage-api"
version = "0.1.0"
description = ""
authors = ["KL-Lru <kilattoeruru@outlook.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.103.1"}
uvicorn = "^0.23.2"
tinydb = "^4.8.0"
argparse = "^1.4.0"
jsonschema = "^4.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
