[tool.poetry]
name = "minimum-wage-api"
version = "1.0.2025"
description = ""
authors = ["KL-Lru <kilattoeruru@outlook.jp>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = { extras = ["all"], version = "^0.115.0" }
uvicorn = "^0.30.6"
tinydb = "^4.8.0"
argparse = "^1.4.0"
jsonschema = "^4.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
