[tool.poetry]
name = "minimum-wage-api"
version = "1.0.2025"
description = ""
authors = ["KL-Lru <kilattoeruru@outlook.jp>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.117.1" }
uvicorn = "^0.37.0"
tinydb = "^4.8.2"
argparse = "^1.4.0"
jsonschema = "^4.25.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
